# RenderdocLab

./: .gitignore  CMakeLists.txt  CMakePresets.json  CmakeLists.txt  README.md  setup.bat  vcpkg.json
Assets/captures/: 0_HelloTriangle.rdc  1_VertBuf.rdc
captures/: 0_HelloTriangle.rdc  2_TextureMapping.rdc  3_Compute.rdc  4_ComputeSkinning.rdc
common/: vulkan_app.cpp  vulkan_app.h  vulkan_compute_app.cpp  vulkan_compute_app.h
examples/0_HelloTriangle/: main.cpp
examples/1_VertexBuffer/: main.cpp
examples/2_TextureMapping/: main.cpp
examples/3_Compute/: main.cpp
examples/3_Compute/shaders/: comp.comp
examples/4_ComputeSkinning/: main.cpp
examples/4_ComputeSkinning/shaders/: comp.comp  shader.vert
src/: main.cpp  vulkan_app.cpp  vulkan_app.h
